
26 June
1. Main button focus issue has a hack-fix
2. Delete multiple pogs at once from the gui.
3. Fixed the help text. Changed the app screenshot.
4. Moved the Purge function out to the File menu. It now applies to the VIEW POG selected.
26 June 
1. Added a test to prevent fonts re-drawing when a new target Pog is clicked.
2. Added help about the Purge menu item.
26 June 
1. Reversed decision to not redraw the target Pog. There are too many subtleties involved for the hammer-and-nail approach I took and I just don't have time to be subtle now. So, it will redraw when you choose another target Pog. Tough.

27 June
1. Changed left/right arrow to pageup/pagedown. Michael Hoeft warned of the damage to editing the search term.
2. Improving the splash image.
27 June
1. Fixed ref to page up/down keys in help.

28 June
1. Upon reflection, the arrow keys are easier than page up/down. So, I added CTRL as a modifier. Now it's ctrl+left/right to step through the pages. (Help updated too.)

29 June
1. Repaired the .desktop file to comply with HIG.

30 June
1. Changed selection menu item toggling system. Recently read a little Gnome HIG :)

1 July
1. Changed logo in help, about and splash.
2. Altered setup.py to remove MANIFEST file if it's there. Unless it's removed, setup.py sdist will potentially miss new files.

6 July 2009
1. Fixed a problem with setup.py that was making ~/.fontypython folder (and as root too). That folder now only gets made when the app is run for the first time, not during setup. Thanks to Pietro for catching this one.

7 July
1. Pietro sent us an Italian .po file. I did "make mos" and I hope that was right.
2. Removed some _() stuff from CORNER CASE error messages.
3. Redacted pofiles/README file somewhat.

24 July
1. A bug was caught by Michael Hoeft - the combo box (for search field) requires wxPython 2.8 -- So we had to shift a few things around. After a false start, I have created version 0.4.1 and am about to upload to the ftp site.