@@ -1,4 +1,4 @@
-include fontypython fp README COPYING fontypython.png fontypython.desktop MANIFEST.in
+include fontypython fp README COPYING CHANGELOG fontypython.png fontypython.desktop MANIFEST.in
 recursive-include fontypythonmodules/pofiles *
 recursive-include fontypythonmodules/things *
 recursive-include fontypythonmodules/locale *
